# cleopatra

./: Cargo.toml  Makefile  README.md
.github/workflows/: main.yml
config/: dev.toml  prod.toml
migrations/: cleopatra.sql
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  suggestion.rs  writer.rs
src/background/: mod.rs  scheduler.rs  writer.rs
src/background/tasks/: mod.rs  sweeper.rs
src/daemon/: mod.rs  writer.rs
src/database/: default.rs  mod.rs
src/routes/: execution.rs  mod.rs  result.rs  stream.rs  utils.rs
tests/: execution_api_test.rs  result_api_test.rs  stream_api_test.rs  test_config.toml
tests/common/: helper.rs  mod.rs  test_config.rs
